--- a/www/style.css
+++ b/www/style.css
@@ -60,15 +60,23 @@ width: 50%;
 border: 0;
 }
 
-#newrecord table{
-width: 80%;
-border: 0px solid;
+.column1{
+width: 40%;
+position: relative;
+float: left;
+text-align: right;
 }
 
-#newrecord table td{
-width: 25%;
-border: inherit;
+.column2{
+width: 40%;
+position: relative;
+float: right;
+text-align: right;
 }
+
+.width25{ margin-top: 5px; width: 25px; }
+.width156{ margin-top: 5px; width: 156px; }
+.width185{ margin-top: 5px; width: 185px; }
 
 #menu_line{
 width: 100%;
@@ -139,7 +147,6 @@ background-color: #fff;
 
 #content{
 width: 100%;
-height: 100%;
 margin-top: 2px; 
 float: left; 
 display:inline; 
@@ -243,25 +250,6 @@ margin:0;
 a.auto,a.auto:hover,a.auto:visited {
 font:10px verdana, arial, helvetica, sans-serif;
 color:#469999;padding:0;margin: 0 20px 0 0;
-}
-
-iframe{
-width: 70%;
-height: 100%;
-
-display: none;
-position: absolute;
-left: 15%;
-z-index: 2;
-
-}
-
-#frame{
-width: 100%;
-height: 100%;
-position: absolute;
-z-index: 2;
-display: none;
 }
 
 #fr{
