--- a/www/style.css
+++ b/www/style.css
@@ -5,7 +5,7 @@ background-color:#fff;
 } 
 
 #page{
-width: 900px;
+width: 95%;
 height: 100%;
 padding : 0;margin: 0 auto;
 }
@@ -45,10 +45,6 @@ display: block;
 background-image: url(images/button.png)
 }
 
-.logout_button{
-display: none;
-}
-
 #login{
 width: 100%;
 position: relative;
@@ -64,23 +60,48 @@ width: 50%;
 border: 0;
 }
 
+#newrecordpage{
+	margin: 0 auto;
+	width: 90%;
+	border: 0px solid red;
+}
+
+#newrecordpage td{
+	vertical-align: top;
+	padding-top: 10px;
+	border: 1px solid;
+}
+
+.row1{
+width: 90%;
+
+border: 1px solid red;
+}
+
+.row2{
+width: 90%;
+
+border: 1px solid red;
+}
+
 .column1{
 width: 40%;
-position: relative;
-float: left;
+
 text-align: right;
+border: 1px solid;
 }
 
 .column2{
 width: 40%;
-position: relative;
-float: right;
+
 text-align: right;
+border: 1px solid;
 }
 
-.width25{ margin-top: 5px; width: 25px; }
-.width156{ margin-top: 5px; width: 156px; }
-.width185{ margin-top: 5px; width: 185px; }
+.width25{ margin-top: 2px; width: 25px; }
+.width156{ margin-top: 2px; width: 156px; }
+.width185{ margin-top: 2px; width: 185px; }
+.width400{ margin-top: 2px; width: 400px; }
 
 #menu_line{
 width: 100%;
@@ -95,7 +116,7 @@ border-bottom: 0;
 }
 
 #menu{
-width: 610px;
+width: 100%;
 height: 30px;
 margin: 5px 0 0 0;
 padding: 0;
@@ -115,7 +136,7 @@ display: inline;
 #menu ul li{
 position: relative;
 float: left;
-width: 120px;
+width: 150px;
 }
 
 #menu ul li ul{
@@ -130,7 +151,7 @@ color: #000;
 text-align: center;
 text-decoration: none;
 
-width: 120px;
+width: 150px;
 height: 25px;
 position: relative;
 float: left;
@@ -271,9 +292,9 @@ border: 1px solid;
 }
 
 #fr{
-position: absolute;
+position: fixed;
 min-width: 500px;
-top: 10px;
+top: 20px;
 left: 15%;
 right: 15%;
 background-color: #fff;
@@ -290,7 +311,7 @@ z-index: 2;
 }
 
 #shadow{
-width: 100%;
+width: 1000%;
 height: 100%;
 position: fixed;
 top: 0;
