--- a/www/style.css
+++ b/www/style.css
@@ -1,9 +1,9 @@
-body{ margin:0; padding:0; background-color:#fff; } 
+body{ margin:0; padding:0; background-color:#fff; height: 100px; }
 
 #page{
 width: 95%;
 min-width: 800px;
-height: 100%;
+
 margin: 0 auto;
 padding : 0;
 }
@@ -79,6 +79,7 @@ width: 150px;
 #menu ul li ul{
 position: absolute;
 top: 26px;
+left: 0px;
 z-index: 1;
 }
 
