--- a/www/style.css
+++ b/www/style.css
@@ -1,7 +1,9 @@
-body{ margin:0; padding:0; background-color:#fff; height: 100px; }
+html{ height: 75%; }
+body{ margin:0; padding:0; background-color:#fff; height: 100% !important; }
 
 #page{
 width: 95%;
+height: 100%;
 min-width: 800px;
 
 margin: 0 auto;
@@ -78,8 +80,9 @@ width: 150px;
 
 #menu ul li ul{
 position: absolute;
-top: 26px;
-left: 0px;
+top: 27px;
+left: -1px;
+border-top: 0;
 z-index: 1;
 }
 
@@ -102,6 +105,7 @@ display: block;
 
 #menu ul li ul a{
 border: 2px solid;
+border-top: 0;
 }
 
 #menu a:hover{
@@ -110,6 +114,7 @@ background-color: #fff;
 
 #content{
 width: 100%;
+height: 100%;
 margin-top: 2px; 
 float: left; 
 display:inline; 
@@ -117,7 +122,7 @@ position: relative;
 
 border: 2px solid #6c7059;
 overflow: hidden;
-overflow: auto;
+overflow: scroll;
 }
 
 #content p{
@@ -134,7 +139,7 @@ height: 100%;
 
 #footer{
 width: 100%;
-height: 50px;
+height: 20px;
 margin-top: 2px; 
 
 position: relative;
