--- a/www/pages.css
+++ b/www/pages.css
@@ -2,17 +2,17 @@
 /*-REISI-*/
 /*-------*/
 
-#reisi th, #reisi td{
-width: auto;
-min-width: 80px;
-max-height: 10px;
-display: table-cell;
-}
 
 .table{
+width: 20px;
 border: 1px solid;
-margin: 8px;
+table-layout: fixed;
 }
+
+.table col{
+width: 110px;
+}
+
 
 .table td{
 border: 1px solid;
@@ -22,8 +22,11 @@ border: 1px solid;
 border: 1px solid;
 }
 
-.kepka{
-top: 200px;
+.tableData{
+height: 300px;
+width: inherit;
+overflow-y:auto;
+
 }
 
 #reisi tr th img{
@@ -216,6 +219,7 @@ position: relative;
 float: left;
 border: 1px solid;
 
+display: none;
 text-align: right;
 }
 
@@ -260,8 +264,39 @@ font-size: inherit;
 }
 
 
-
-
 .date_picker{
 display: inline;
+}
+
+.table1{
+width: 100%;
+}
+
+.table1 td{
+width: 50%;
+}
+
+.border40{
+width: 400px;
+border: 1px solid;
+margin-top: 40px;
+margin-left: 40px;
+background-color: #eee;
+}
+
+.ycell{
+background-color: #ff0;
+}
+
+.bir{
+
+font-size: 20px;
+background-color: #0ff;
+}
+
+#sluzhebnaya{
+text-align: right;
+margin: auto;
+width: 60%;
+border: 1px solid;
 }
