--- a/www/style.css
+++ b/www/style.css
@@ -5,7 +5,6 @@ body{ margin:0; padding:0; background-color:#fff; height: 100% !important; }
 width: 95%;
 height: 100%;
 min-width: 800px;
-
 margin: 0 auto;
 padding : 0;
 }
@@ -29,18 +28,13 @@ padding: 0;
 color: #000;
 text-align: center;
 text-decoration: none;
-
 width: 90px;
 height: 20px;
-
 position:relative;
 float: left;
 display: block;
-
 background-image: url(images/button.png);
 }
-
-
 
 #menu_line{
 width: 100%;
@@ -59,7 +53,6 @@ width: 760px;
 height: 30px;
 margin: 5px 0 0 0;
 padding: 0;
-
 position: relative;
 float: center;
 background-color: #6c7059;
@@ -91,13 +84,11 @@ font-size: 20px;
 color: #000;
 text-align: center;
 text-decoration: none;
-
 width: 150px;
 height: 25px;
 position: relative;
 float: left;
 margin: 0;
-
 border: 1px solid;
 background-color: #a5a5a2;
 display: block;
@@ -108,9 +99,7 @@ border: 2px solid;
 border-top: 0;
 }
 
-#menu a:hover{
-background-color: #fff;
-}
+#menu a:hover{ background-color: #fff; }
 
 #content{
 width: 100%;
@@ -119,14 +108,11 @@ margin-top: 2px;
 float: left; 
 display:inline; 
 position: relative; 
-
 border: 2px solid #6c7059;
 overflow-x: auto;
 }
 
-#content p{
-padding: 0 30px 0 24px;
-}
+#content p{ padding: 0 30px 0 24px; }
 
 #example{
 border: 1px solid;
@@ -140,19 +126,14 @@ height: 100%;
 width: 100%;
 height: 20px;
 margin-top: 2px; 
-
 position: relative;
 float: left;
-
 text-align:center;
 background-color: #6c7059;
 border: 2px solid #6c7059;
 }
 
-#footer p {
-font:10px verdana, arial, helvetica, sans-serif;
-
-}
+#footer p { font:10px verdana, arial, helvetica, sans-serif; }
 
 .greytd{ background-color: #6c7059; }
 
@@ -162,23 +143,7 @@ font:10px verdana, arial, helvetica, sans-serif;
 
 .tdcenter{ text-align: center; }
 
-span.c1 {
-display:none;
-}
-
-h1.c0 {
-background: url(images/logo.png) no-repeat;
-height:52px;
-margin:0 0 0 30px;
-padding: 0;
-} 
-
-h2 {
-font:18px verdana, arial, helvetica, sans-serif;
-color:#3E8282;font-weight:900;
-padding: 0 0 0 30px;
-margin:0;
-}
+.date_picker{ display: inline; }
 
 
 #fr{
@@ -190,10 +155,8 @@ right: 5%;
 background-color: #fff;
 border:5px solid #55f;
 border-radius: 30px/20px;
-
 margin: auto;
 padding: 10px;
-
 display: none;
 overflow: hidden;
 overflow: auto;
