--- a/www/pages.css
+++ b/www/pages.css
@@ -7,7 +7,7 @@ border: 1px solid;
 table-layout: fixed;
 }
 
-.table col{ width: 110px; }
+.table col{ width: 120px; }
 
 .table td{ border: 1px solid; }
 
@@ -18,6 +18,8 @@ height: 300px;
 width: inherit;
 overflow-y:auto;
 }
+
+.filterDiv{ display: inline; }
 
 #reisi tr th img{
 position: relative;
@@ -84,6 +86,7 @@ border: 0px solid;
 }
 
 .width25{ margin-top: 2px; width: 25px; }
+.width110{ margin: 0; margin-top: 2px; width: 110px; }
 .width156{ margin-top: 2px; width: 156px; }
 .width185{ margin-top: 2px; width: 185px; }
 .width400{ margin-top: 2px; width: 400px; }
