--- a/www/pages.css
+++ b/www/pages.css
@@ -21,11 +21,18 @@ overflow-y:auto;
 
 .filterDiv{ display: inline; }
 
+.fixed th{
+height: 55px; 
+vertical-align: top;
+}
+
+.fixed th div{ height: 50px; }
+
+
 #reisi tr th img{
 position: relative;
 float: right;
 }
-
 
 /*-------*/
 /*-LOGIN-*/
@@ -192,11 +199,10 @@ border: 1px solid;
 /*-CHANGE_PASS-*/
 /*-------------*/
 #change_pass{
+margin: auto;
 width: 400px;
-position: relative;	
-float: left;
+
 border: 1px solid;
-display: none;
 text-align: right;
 }
 
