--- a/www/style.css
+++ b/www/style.css
@@ -1,10 +1,9 @@
-html{ height: 75%; }
+html{ height: 425px; }
 body{ margin:0; padding:0; background-color:#fff; height: 100% !important; }
 
 #page{
 width: 95%;
 height: 100%;
-min-width: 800px;
 margin: 0 auto;
 padding : 0;
 }
@@ -172,4 +171,31 @@ background-color: #000;
 opacity: 0.6;
 display: none;
 z-index: 2;
+}
+
+#fr1{
+position: absolute;
+background-color: #fff;
+border:2px solid #55f;
+border-radius: 10px/10px;
+padding: 10px;
+display: none;
+z-index: 2;
+}
+
+#shadow1{
+width: 1000%;
+height: 100%;
+position: fixed;
+top: 0;
+background-color: #000;
+opacity: 0;
+display: none;
+z-index: 2;
+}
+
+#fr1 div{
+max-height: 200px;
+overflow: hidden;
+overflow: auto;
 }
