--- a/www/pages.css
+++ b/www/pages.css
@@ -9,9 +9,9 @@ table-layout: fixed;
 
 .table col{ width: 120px; }
 
-.table td{ border: 1px solid; }
+.table td{ border: 1px solid; overflow: hidden; }
 
-.table th{ border: 1px solid; }
+.table th{ border: 1px solid; overflow: hidden; }
 
 .tableData{
 height: 300px;
@@ -20,10 +20,6 @@ overflow-y:auto;
 }
 
 .filterDiv{ display: inline; }
-
-.fixed th{
-
-}
 
 .fixed th div{ }
 
