--- a/www/pages.css
+++ b/www/pages.css
@@ -89,6 +89,7 @@ border: 0px solid;
 
 .width25{ margin-top: 2px; width: 25px; }
 .width110{ margin: 0; margin-top: 2px; width: 110px; }
+.width130{ margin-top: 2px; width: 130px; }
 .width156{ margin-top: 2px; width: 156px; }
 .width185{ margin-top: 2px; width: 185px; }
 .width400{ margin-top: 2px; width: 400px; }
@@ -270,3 +271,29 @@ border: 1px solid;
 .table2{ width: 100%; }
 
 .table2 td{ width: 50%; }
+
+
+
+#config td{
+border: 1px solid;
+}
+
+#percents{
+width: 100%;
+border: 1px solid;
+}
+
+#percents td,th{
+width: 25%;
+border: 1px solid;
+}
+
+#percents th div{
+position: relative;
+float: left;
+width: 47%;
+}
+
+#percents td input{
+width: 25px;
+}
