--- a/www/style.css
+++ b/www/style.css
@@ -162,6 +162,14 @@ overflow: auto;
 z-index: 2;
 }
 
+#closeimg{
+position: absolute;
+top: 10px;
+right: 4%;
+z-index: 2;
+display: none;
+}
+
 #shadow{
 width: 1000%;
 height: 100%;
